Fix #188 align block icon

--- a/src/app/modules/core/components/header/header.component.scss
+++ b/src/app/modules/core/components/header/header.component.scss
@@ -35,6 +35,10 @@ button {
   border-radius: 20px;
 }
 
+#block-icon {
+  vertical-align: top;
+}
+
 [mat-flat-button] {
   background-color: var(--leaphy-color-secundary);
   border-color: none;
